# MCMC-Visualizer

./: Cargo.toml  Readme.md
src/: bellcurve.rs  gaussian.rs  lib.rs  main.rs  metropolis.rs  stage.rs
