[package]
name = "mcmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
plotters-iced = "0.8"
iced = {version = "0.9", features = ["canvas", "tokio", "debug"]}
rand = "0.8.5"
tokio = {version = "1.0", features = ["sync"]}
itertools = "0.9"
rustc-hash = "1.1"
env_logger = "0.9"
rand_distr = "0.4.3"
serde = "1.0.162"
